--- a/contact_strategies.ipynb
+++ b/contact_strategies.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,26 +32,28 @@
     "time_limit = 1000\n",
     "unit_time = population_size # number of simulation steps that make up one time step\n",
     "\n",
-    "time_until_quarantine = 4 # make distribution later\n",
+    "time_until_quarantine = {\n",
+    "    'mean': 4,\n",
+    "    'std_dev': 2\n",
+    "}\n",
     "time_until_recovery = 10 # make distribution later\n",
     "p = 0.1 # Factor for probability to become infected in public"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Network' object has no attribute 'population'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-e0c3f6e6a1c7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# Population dictionary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m# {ID: Person}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mpopulation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpopulation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumber_of_nodes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Network' object has no attribute 'population'"
-     ]
+     "data": {
+      "text/plain": [
+       "<person.Person at 0x7fdefc1b1cd0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -66,7 +68,7 @@
     "\n",
     "# Population dictionary\n",
     "# {ID: Person}\n",
-    "population = network.population\n",
+    "population = network._population\n",
     "    \n",
     "network.number_of_nodes()\n",
     "network.nodes[0]['person']"
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +84,7 @@
     "# Initialize compartment ID lists\n",
     "S = list(population.keys()) # Susceptibles\n",
     "first_infected = random.choice(list(population.values()))\n",
-    "first_infected.time_to_quarantine = time_until_quarantine\n",
+    "first_infected.time_to_quarantine = np.random.normal(time_until_quarantine['mean'], time_until_quarantine['std_dev'])\n",
     "I = [first_infected.ID] # Infectious\n",
     "S.remove(first_infected.ID)\n",
     "Q = [] # Quarantined\n",
@@ -91,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease = Disease_Propagator(time_limit)\n",
-    "S_t, I_t = disease.simulate(population, S, I, Q, time_until_quarantine, time_until_recovery, p)\n"
+    "disease = Disease_Propagator(time_limit, time_until_quarantine['mean'], time_until_quarantine['std_dev'])\n",
+    "S_t, I_t = disease.simulate(network, S, I, Q, time_until_recovery, p)\n"
    ]
   },
   {
