--- a/contact_strategies.ipynb
+++ b/contact_strategies.ipynb
@@ -48,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "<person.Person at 0x1d06560d508>"
+       "<person.Person at 0x293c5f01988>"
       ]
      },
      "execution_count": 3,
@@ -68,10 +68,9 @@
     "\n",
     "# Population dictionary\n",
     "# {ID: Person}\n",
-    "population = network._population\n",
+    "population = network.get_population()\n",
     "    \n",
-    "network.number_of_nodes()\n",
-    "network.nodes[0]['person']"
+    "network.number_of_nodes()"
    ]
   },
   {
@@ -80,7 +79,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Network handler\n",
+    "network_handler = Network_Handler(network)\n",
     "\n",
+    "# Randomly reduced network\n",
+    "randomly_reduced_network = network_handler.random_reduction()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Initialize compartment ID lists\n",
     "S = list(population.keys()) # Susceptibles\n",
     "first_infected = random.choice(list(population.values()))\n",
@@ -144,18 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "EdgeView([(1, 2)])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "remove_edge() missing 1 required positional argument: 'v'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-0eb81b88c421>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mnetwork1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0medges\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnetwork1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0medges\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mnetwork1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove_edge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mls\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: remove_edge() missing 1 required positional argument: 'v'"
+     ]
     }
    ],
    "source": [
@@ -165,7 +177,8 @@
     "network1.add_edge(1,2)\n",
     "network2 = network1.copy()\n",
     "network2.remove_edge(1,2)\n",
-    "network1.edges()"
+    "network1.edges()\n",
+    "ls = list(network1.edges)\n"
    ]
   },
   {
