Added triadic strategy network

--- a/contact_strategies.ipynb
+++ b/contact_strategies.ipynb
@@ -44,18 +44,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<person.Person at 0x293c5f01988>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "population_IDs = range(population_size)\n",
     "\n",
@@ -68,22 +57,37 @@
     "\n",
     "# Population dictionary\n",
     "# {ID: Person}\n",
-    "population = network.get_population()\n",
-    "    \n",
-    "network.number_of_nodes()"
+    "population = network.get_population()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "1305\n",
+      "1388\n"
+     ]
+    }
+   ],
    "source": [
     "# Network handler\n",
     "network_handler = Network_Handler(network)\n",
     "\n",
     "# Randomly reduced network\n",
-    "randomly_reduced_network = network_handler.random_reduction()"
+    "randomly_reduced_network = network_handler.random_reduction()\n",
+    "\n",
+    "# Reduced network with triadic strategy\n",
+    "triadic_network = network_handler.triadic_strategy()\n",
+    "\n",
+    "print(len(list(network.edges)))\n",
+    "print(len(list(randomly_reduced_network.edges)))\n",
+    "print(len(list(triadic_network.edges))) "
    ]
   },
   {
