--- a/contact_strategies.ipynb
+++ b/contact_strategies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "population_size = 1000\n",
+    "population_size = 10000\n",
     "average_degree = 5\n",
-    "random_edge_probability = 0.3\n",
+    "random_edge_probability = 0.1\n",
     "\n",
     "time_limit = 1000\n",
-    "unit_time = population_size # number of simulation steps that make up one time step\n",
+    "unit_time = population_size/10 # number of simulation steps that make up one time step\n",
     "\n",
     "time_until_quarantine = {\n",
     "    'mean': 4,\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,16 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2000\n",
-      "1324\n",
-      "1315\n"
+      "20000\n",
+      "13117\n",
+      "12856\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,6 +190,8 @@
     "fig,ax = plt.subplots(3,1,figsize=(10,6))\n",
     "\n",
     "for i,key in enumerate(S):\n",
+    "    ax[i].set_title(key)\n",
+    "    ax[i].xlable(\"timestep\")\n",
     "    ax[i].set_xlim(0,200)\n",
     "    ax[i].plot(time_range, S_t[key])\n",
     "    ax[i].plot(time_range, I_t[key])\n"
