--- a/contact_strategies.ipynb
+++ b/contact_strategies.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import matplotlib.pyplot as plt\n",
@@ -31,16 +22,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 29,
-=======
-   "execution_count": 114,
->>>>>>> 29d2f5a5494c029699c55730e8f278950a0073e5
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "number_of_simulations = 100\n",
+    "number_of_simulations = 1\n",
     "population_size = 1000\n",
     "average_degree = 5 #Number of initial connections #Distribution\n",
     "\n",
@@ -68,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,19 +72,16 @@
     "# Init our networkhandler with the base_network we defined above\n",
     "network_handler = Network_Handler(network_base)\n",
     "\n",
-    "# Randomly reduced network\n",
-    "network_randomly_reduced = network_handler.random_reduction()\n",
-    "\n",
     "# Reduced network with triadic strategy\n",
     "network_triadic = network_handler.triadic_strategy()\n",
     "\n",
     "# Repeating contacts\n",
-    "network_repeating = network_handler.repeating_contacts(network_base, maximum_contact_number)\n",
+    "#network_repeating = network_handler.repeating_contacts(network_base, maximum_contact_number)\n",
     "\n",
     "network = {\"base\":network_base,\n",
-    "          \"randomly_reduced\":network_randomly_reduced,\n",
-    "          \"triadic\":network_triadic,\n",
-    "          \"repeating contacts\": network_repeating}"
+    "          \"triadic\":network_triadic#,\n",
+    "          #\"repeating contacts\": network_repeating\n",
+    "          }"
    ]
   },
   {
@@ -109,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,17 +101,14 @@
      "output_type": "stream",
      "text": [
       "2000\n",
-      "1312\n",
-      "1281\n",
-      "952\n"
+      "2000\n"
      ]
     }
    ],
    "source": [
     "print(len(list(network_base.edges)))\n",
-    "print(len(list(network_randomly_reduced.edges)))\n",
     "print(len(list(network_triadic.edges))) \n",
-    "print(len(list(network_repeating.edges))) "
+    "#print(len(list(network_repeating.edges))) "
    ]
   },
   {
@@ -139,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'weight'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-2353f15d855b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mI_t\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[0mS_t\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mI_t\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdisease\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msimulate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnetwork\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m25\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0msim_S\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mS_t\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"base\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mS_t\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"triadic\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;31m#,S_t[\"repeating contacts\"]])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Documents\\Uni\\contact_strategies\\disease_propagator.py\u001b[0m in \u001b[0;36msimulate\u001b[1;34m(self, network, p, number_of_first_infected)\u001b[0m\n\u001b[0;32m     80\u001b[0m                 \u001b[1;32mfor\u001b[0m \u001b[0mcontact_ID\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpermutation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mperson1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontacts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m                     \u001b[0mperson2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcontact_ID\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"person\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 82\u001b[1;33m                     \u001b[1;32mif\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muniform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0medges\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mID\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcontact_ID\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"weight\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     83\u001b[0m                         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minteraction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mperson1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mperson2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'weight'"
+     ]
+    }
+   ],
    "source": [
     "#Loop over every of our networks... maybe implement that into the network handler\n",
     "sim_S = []\n",
@@ -161,8 +155,8 @@
     "    for key in network.keys():\n",
     "        S_t[key], I_t[key] = disease.simulate(network[key], p, 25)\n",
     "    \n",
-    "    sim_S.append([S_t[\"base\"],S_t[\"randomly_reduced\"],S_t[\"triadic\"],S_t[\"repeating contacts\"]])\n",
-    "    sim_I.append([I_t[\"base\"],I_t[\"randomly_reduced\"],I_t[\"triadic\"],I_t[\"repeating contacts\"]])\n",
+    "    sim_S.append([S_t[\"base\"],S_t[\"triadic\"]])#,S_t[\"repeating contacts\"]])\n",
+    "    sim_I.append([I_t[\"base\"],I_t[\"triadic\"]])#,I_t[\"repeating contacts\"]])\n",
     "\n",
     "sim_S = np.array(sim_S)\n",
     "sim_I = np.array(sim_I)   \n",
@@ -391,18 +385,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "probabilities do not sum to 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-37-f17deb6e1674>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m9\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: probabilities do not sum to 1"
+     ]
+    }
+   ],
    "source": [
-    "# just some general testing\n",
-    "network1 = nx.Graph()\n",
-    "network1.add_nodes_from([1,2])\n",
-    "network1.add_edge(1,2)\n",
-    "network2 = network1.copy()\n",
-    "network2.remove_edge(1,2)\n",
-    "network1.edges()\n",
-    "ls = list(network1.edges)\n"
+    "\n"
    ]
   },
   {
