--- a/contact_strategies.ipynb
+++ b/contact_strategies.ipynb
@@ -134,7 +134,7 @@
     "    S_t = {}\n",
     "    I_t = {}\n",
     "    for key in scenarios.keys():\n",
-    "        S_t[key], I_t[key] = disease.simulate(scenarios[key][0], p, I_0, scenarios[key][1])\n",
+    "        S_t[key], I_t[key] = disease.simulate(copy.deepcopy(scenarios[key][0]), p, I_0, scenarios[key][1])\n",
     "    \n",
     "        sim_S.append(S_t[key])\n",
     "        sim_I.append(I_t[key])\n",
